# shtum

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  install.sh
.github/workflows/: release.yml
docs/: claude-code-integration.md  cookbook.md  dashboard.md  threat-model.md
src/: cli.rs  exec.rs  hook.rs  inject.rs  main.rs  redact.rs  temp.rs  tempfile.rs  util.rs
src/dashboard/: auth.rs  form.rs  html.rs  mod.rs
src/store/: keychain.rs  mod.rs
