[package]
name = "shtum"
version = "0.1.0-dev"
edition = "2024"
description = "Secret-injecting command wrapper for AI agents"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.85"
publish = false

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
rpassword = "7"
regex = "1"
base64 = "0.22"
percent-encoding = "2"
serde_json = "1"
tiny_http = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
